--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -946,11 +946,19 @@ function check_run_tests() {
     fi
 }
 
+function check_install_universal_pathlib() {
+    echo
+    echo "${COLOR_BLUE}Installing universal python pathlib from PR url${COLOR_RESET}"
+    echo
+    pip install --root-user-action ignore git+https://github.com/ap--/universal_pathlib/@support-py312#egg=universal-pathlib
+}
+
 determine_airflow_to_use
 environment_initialization
 check_boto_upgrade
 check_download_sqlalchemy
 check_download_pendulum
+check_install_universal_pathlib
 check_run_tests "${@}"
 
 exec /bin/bash "${@}"
